--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "concurrently": "^8.2.1"
